[package]
name = "uerr"
version = "0.1.0"
edition = "2021"
license = "MIT"
license-file = "LICENSE"
authors = ["ImajinDevon"]
description = "A crate which provides stunning visual error handling."

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
